--- a/app/src/main/res/layout/activity_songs_discover_page.xml
+++ b/app/src/main/res/layout/activity_songs_discover_page.xml
@@ -4,26 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SongsDiscoverPage"
-    android:padding="10dp">
+    tools:context=".MusicModule.SongsDiscoverPage">
 
     <SearchView
         android:id="@+id/searchDiscover"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:queryHint="What do you want to listen to"
-        android:iconifiedByDefault="false"
         android:layout_margin="10dp"
-        android:background="@drawable/search_bg"/>
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:background="@drawable/search_bg"
+        android:iconifiedByDefault="false"
+        android:queryHint="What do you want to listen to"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/songsDiscoverPageToolbar" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/discoverRecView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="10dp"
         android:scrollbars="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,5 +44,19 @@
         app:iconTint="@color/white"
         android:text="New Playlist"
         android:textColor="@color/white"/>
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/songsDiscoverPageToolbar"
+        android:layout_width="409dp"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:backgroundTint="@color/mainBgColour"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:title="Discover Songs"
+        app:titleTextColor="@color/lighterBlue" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
