--- a/app/src/main/res/layout/activity_songs_main_page.xml
+++ b/app/src/main/res/layout/activity_songs_main_page.xml
@@ -5,12 +5,28 @@
     android:id="@+id/songsMainPageLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SongsMainPage">
+    tools:context=".MusicModule.SongsMainPage">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/songsMainPageToolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/mainBgColour"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:title="Playlist"
+        app:titleTextColor="@color/lighterBlue"/>
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nestedScrollView2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/songsMainPageToolbar">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -27,12 +43,13 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/playAll" />
 
-            <ViewStub
+            <LinearLayout
                 android:id="@+id/playlistImage"
-                android:inflatedId="@id/playlistImage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
+                android:inflatedId="@id/playlistImage"
+                android:orientation="horizontal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
