--- a/app/src/main/res/drawable/text_input.xml
+++ b/app/src/main/res/drawable/text_input.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/white" />
+    <solid android:color="#E2DFD2" />
     <corners android:radius="3dp"/>
     <padding android:left="15dp" android:right="15dp"/>
 </shape>
