--- a/app/src/main/res/layout/activity_counsellor_details_page.xml
+++ b/app/src/main/res/layout/activity_counsellor_details_page.xml
@@ -17,20 +17,12 @@
         android:text="Start"
         android:textColor="@color/white"
         android:textSize="14sp"
+        android:padding="5dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
-    <Spinner
-        android:id="@+id/startTimeHour"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintStart_toEndOf="@+id/textView6"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
-
     <Button
-        android:id="@+id/button8"
+        android:id="@+id/sunday"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginStart="10dp"
@@ -40,11 +32,11 @@
         android:text="Sun"
         android:textSize="10dp"
         app:backgroundTint="@color/white"
-        app:layout_constraintStart_toEndOf="@+id/button7"
+        app:layout_constraintStart_toEndOf="@+id/saturday"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/friday"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginStart="10dp"
@@ -54,11 +46,11 @@
         android:text="Fri"
         android:textSize="10dp"
         app:backgroundTint="@color/white"
-        app:layout_constraintStart_toEndOf="@+id/button5"
+        app:layout_constraintStart_toEndOf="@+id/thursday"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <Button
-        android:id="@+id/button7"
+        android:id="@+id/saturday"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginStart="10dp"
@@ -68,11 +60,11 @@
         android:text="Sat"
         android:textSize="10dp"
         app:backgroundTint="@color/white"
-        app:layout_constraintStart_toEndOf="@+id/button6"
+        app:layout_constraintStart_toEndOf="@+id/friday"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/wednesday"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginStart="10dp"
@@ -82,11 +74,11 @@
         android:text="Wed"
         android:textSize="10dp"
         app:backgroundTint="@color/white"
-        app:layout_constraintStart_toEndOf="@+id/button4"
+        app:layout_constraintStart_toEndOf="@+id/tuesday"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/thursday"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginStart="10dp"
@@ -96,7 +88,7 @@
         android:text="Thu"
         android:textSize="10dp"
         app:backgroundTint="@color/white"
-        app:layout_constraintStart_toEndOf="@+id/button3"
+        app:layout_constraintStart_toEndOf="@+id/wednesday"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <TextView
@@ -123,24 +115,25 @@
         android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintTop_toBottomOf="@+id/monday" />
 
     <Button
-        android:id="@+id/signUpBtn"
+        android:id="@+id/nextBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:backgroundTint="@color/lightBlue"
         android:fontFamily="@font/poppins_medium"
         android:paddingLeft="40dp"
         android:paddingRight="40dp"
-        android:text="Sign Up"
-        android:textColor="#406B9D"
+        android:text="Next"
+        android:textColor="@color/kindaDarkBlue"
         android:textSize="16sp"
         app:cornerRadius="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="682dp" />
+        app:layout_constraintTop_toBottomOf="@+id/endTimeBtn" />
 
     <TextView
         android:id="@+id/textView18"
@@ -175,6 +168,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
         android:fontFamily="@font/poppins_light"
+        android:padding="5dp"
         android:text="End"
         android:textColor="@color/white"
         android:textSize="14sp"
@@ -230,6 +224,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView13" />
 
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/usernameLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
@@ -280,7 +275,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView17">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/hospitalInput"
+            android:id="@+id/counsellorPositionInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins_light"
@@ -309,7 +304,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView18">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/aboutMeInput"
+            android:id="@+id/counsellorDescInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins_light"
@@ -318,7 +313,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/monday"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginStart="20dp"
@@ -332,7 +327,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/tuesday"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginStart="10dp"
@@ -342,7 +337,39 @@
         android:text="Tue"
         android:textSize="10dp"
         app:backgroundTint="@color/white"
-        app:layout_constraintStart_toEndOf="@+id/button2"
+        app:layout_constraintStart_toEndOf="@+id/monday"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
+    <Button
+        android:id="@+id/startTimeBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:backgroundTint="@color/lightBlue"
+        android:minWidth="0dp"
+        android:minHeight="0dp"
+        android:padding="5dp"
+        android:text="Start Time"
+        android:textColor="@color/kindaDarkBlue"
+        app:cornerRadius="5dp"
+        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+
+    <Button
+        android:id="@+id/endTimeBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:backgroundTint="@color/lightBlue"
+        android:minWidth="0dp"
+        android:minHeight="0dp"
+        android:padding="5dp"
+        android:text="End Time"
+        android:textColor="@color/kindaDarkBlue"
+        app:cornerRadius="5dp"
+        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
