--- a/app/src/main/res/layout/activity_user_landing_page.xml
+++ b/app/src/main/res/layout/activity_user_landing_page.xml
@@ -48,23 +48,24 @@
                 app:layout_constraintTop_toTopOf="@+id/view2" />
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/landingPageProfilePic"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="15dp"
+                android:scaleType="centerCrop"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView9"
                 tools:srcCompat="@tools:sample/avatars" />
 
             <TextView
-                android:id="@+id/username"
+                android:id="@+id/landingPageUsername"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:text="Username"
-                app:layout_constraintStart_toEndOf="@+id/imageView2"
-                app:layout_constraintTop_toTopOf="@+id/imageView2" />
+                app:layout_constraintStart_toEndOf="@+id/landingPageProfilePic"
+                app:layout_constraintTop_toTopOf="@+id/landingPageProfilePic" />
 
             <TextView
                 android:id="@+id/textView11"
@@ -72,8 +73,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:text="Handle"
-                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
-                app:layout_constraintStart_toEndOf="@+id/imageView2" />
+                app:layout_constraintBottom_toBottomOf="@+id/landingPageProfilePic"
+                app:layout_constraintStart_toEndOf="@+id/landingPageProfilePic" />
 
             <TextView
                 android:id="@+id/textView12"
