--- a/app/src/main/res/layout/counsellor_chat_item.xml
+++ b/app/src/main/res/layout/counsellor_chat_item.xml
@@ -8,8 +8,9 @@
 
     <ImageView
         android:id="@+id/counsellorImg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
