--- a/app/src/main/res/layout/discover_playlist_item.xml
+++ b/app/src/main/res/layout/discover_playlist_item.xml
@@ -16,17 +16,8 @@
         android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <ViewStub
-            android:id="@+id/playlistImageDiscover"
-            android:inflatedId="@id/playlistImageDiscover"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-    </LinearLayout>
-
-
+        app:layout_constraintEnd_toEndOf="parent"
+        android:orientation="horizontal"/>
 
     <TextView
         android:id="@+id/playlistNameDiscover"
