--- a/app/src/main/res/layout/activity_add_playlist.xml
+++ b/app/src/main/res/layout/activity_add_playlist.xml
@@ -4,18 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#7792b2"
     tools:context=".AddPlaylist">
+
+    <include layout="@layout/appbar"/>
 
     <EditText
         android:id="@+id/playlistET"
         android:layout_width="290dp"
         android:layout_height="54dp"
-        android:layout_marginTop="268dp"
         android:ems="10"
-        android:inputType="text"
         android:hint="Playlist name"
+        android:inputType="text"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -23,10 +26,36 @@
         android:id="@+id/createButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="60dp"
         android:text="Create"
-        app:backgroundTint="#1C6485"
+        android:textColor="#000000"
+        app:backgroundTint="#c1dcef"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/playlistET" />
+
+    <Button
+        android:id="@+id/cancelButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="44dp"
+        android:layout_marginStart="60dp"
+        android:text="Cancel"
+        android:textColor="#000000"
+        app:backgroundTint="#9fb2c8"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/playlistET" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="57dp"
+        android:text="Give your playlist a name"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:textColor="#ffffff"
+        app:layout_constraintBottom_toTopOf="@+id/playlistET"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
