--- a/app/src/main/res/layout/activity_add_song_to_playlist.xml
+++ b/app/src/main/res/layout/activity_add_song_to_playlist.xml
@@ -7,18 +7,21 @@
     tools:context=".PlaylistInside"
     android:id="@+id/relativelayout2">
 
+    <include layout="@layout/appbar"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="120dp">
+        android:layout_height="149dp"
+        android:layout_marginTop="?attr/actionBarSize">
 
         <Button
             android:id="@+id/button2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
+            android:backgroundTint="#c1dcef"
             android:text="Create New Playlist"
-            android:backgroundTint="#92B4D6"
+            android:textColor="#111111"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -28,11 +31,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="24dp"
             android:text="Your Playlist"
-            android:textStyle="bold"
-            android:textSize="22sp"
             android:textColor="@color/playlist_name"
+            android:textSize="22sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -40,7 +43,6 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview5"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="120dp"
-        />
+        android:layout_height="600dp"
+        android:layout_marginTop="215dp" />
 </RelativeLayout>
