--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,20 @@
     android:background="#C8D5FB"
     tools:context=".MainActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/playlistRV"
-        android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:layout_marginTop="92dp"
+    <include layout="@layout/appbar" />
+
+    <EditText
+        android:id="@+id/search_bar"
+        android:layout_width="350dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="80dp"
+        android:background="@android:color/background_light"
+        android:ems="10"
+        android:hint="What do you want to listen to?"
+        android:inputType="text"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -30,107 +37,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ic_search" />
 
-    <TextView
-        android:id="@+id/title_peacefulPiano"
-        android:layout_width="64dp"
-        android:layout_height="19dp"
-        android:layout_marginTop="3dp"
-        android:text="Peaceful Piano"
-        android:textSize="12sp"
-        android:textStyle="italic"
-        android:singleLine="true"
-        android:ellipsize="end"
-        app:layout_constraintStart_toStartOf="@+id/ic_peacefulPiano"
-        app:layout_constraintTop_toBottomOf="@+id/ic_peacefulPiano" />
-
-    <ImageButton
-        android:id="@+id/ic_peacefulPiano"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="388dp"
-        android:background="@drawable/peaceful_icon"
-        android:contentDescription="lol"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-
-    <ImageButton
-        android:id="@+id/ic_lofiMedi"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="244dp"
-        android:background="@drawable/lofi_icon"
-        android:contentDescription="lol"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/title_lofiMedi"
-        android:layout_width="60dp"
-        android:layout_height="17dp"
-        android:layout_marginTop="3dp"
-        android:text="lofi meditation"
-        android:textSize="12sp"
-        android:textStyle="italic"
-        android:singleLine="true"
-        android:ellipsize="end"
-        app:layout_constraintStart_toStartOf="@+id/ic_lofiMedi"
-        app:layout_constraintTop_toBottomOf="@+id/ic_lofiMedi" />
-
-    <TextView
-        android:id="@+id/title_peacefulMedi"
-        android:layout_width="60dp"
-        android:layout_height="17dp"
-        android:layout_marginTop="3dp"
-        android:text="Peaceful Meditation"
-        android:textSize="12sp"
-        android:textStyle="italic"
-        android:singleLine="true"
-        android:ellipsize="end"
-        app:layout_constraintStart_toStartOf="@+id/ic_peacefulMedi"
-        app:layout_constraintTop_toBottomOf="@+id/ic_peacefulMedi" />
-
-    <ImageButton
-        android:id="@+id/ic_peacefulMedi"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="112dp"
-        android:layout_marginTop="244dp"
-        android:background="@drawable/peaceful_icon"
-        android:contentDescription="lol"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/title_mediVideo"
-        android:layout_width="60dp"
-        android:layout_height="15dp"
-        android:layout_marginTop="3dp"
-        android:text="Professional Wild Child"
-        android:textSize="12sp"
-        android:textStyle="italic"
-        app:layout_constraintStart_toStartOf="@+id/ic_mediVideo"
-        app:layout_constraintTop_toBottomOf="@+id/ic_mediVideo" />
-
-    <ImageButton
-        android:id="@+id/ic_mediVideo"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="528dp"
-        android:background="@drawable/meditate_icon"
-        android:contentDescription="lol"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/myPlaylistTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginBottom="4dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="12dp"
+        android:paddingTop="5dp"
         android:text="My Playlist"
         android:textColor="@color/playlist_name"
         android:textSize="20sp"
@@ -138,25 +52,22 @@
         app:layout_constraintBottom_toTopOf="@+id/playlistRV"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
-        android:id="@+id/goodNightTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginBottom="8dp"
-        android:text="Good Night Songs"
-        android:textColor="@color/playlist_name"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/ic_peacefulPiano"
-        app:layout_constraintStart_toStartOf="parent" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/playlistRV"
+        android:layout_width="match_parent"
+        android:layout_height="125dp"
+        android:layout_marginTop="192dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/relaxTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginBottom="4dp"
         android:text="Relaxation Songs"
         android:textColor="@color/playlist_name"
         android:textSize="20sp"
@@ -164,17 +75,132 @@
         app:layout_constraintBottom_toTopOf="@+id/ic_peacefulMedi"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <ImageButton
+        android:id="@+id/ic_lofiMedi"
+        android:layout_width="85dp"
+        android:layout_height="85dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="356dp"
+        android:background="@drawable/lofimedi_ic"
+        android:contentDescription="lol"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/title_peacefulMedi"
+        android:layout_width="85dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="4dp"
+        android:text="Peaceful Meditation"
+        android:textAlignment="center"
+        android:textSize="12sp"
+        android:textStyle="italic"
+        app:layout_constraintStart_toStartOf="@+id/ic_peacefulMedi"
+        app:layout_constraintTop_toBottomOf="@+id/ic_peacefulMedi" />
+
+    <TextView
+        android:id="@+id/title_lofiMedi"
+        android:layout_width="85dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="4dp"
+        android:text="lofi meditation"
+        android:textAlignment="center"
+        android:textSize="12sp"
+        android:textStyle="italic"
+        app:layout_constraintStart_toStartOf="@+id/ic_lofiMedi"
+        app:layout_constraintTop_toBottomOf="@+id/ic_lofiMedi" />
+
+    <ImageButton
+        android:id="@+id/ic_peacefulMedi"
+        android:layout_width="85dp"
+        android:layout_height="85dp"
+        android:layout_marginStart="112dp"
+        android:layout_marginTop="356dp"
+        android:background="@drawable/peacefulmedi_i"
+        android:contentDescription="lol"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/goodNightTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="4dp"
+        android:text="Good Night Songs"
+        android:textColor="@color/playlist_name"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/ic_peacefulPiano"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageButton
+        android:id="@+id/ic_peacefulPiano"
+        android:layout_width="85dp"
+        android:layout_height="85dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="512dp"
+        android:background="@drawable/peacefulpiano_ic"
+        android:contentDescription="lol"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/ic_mediVideo"
+        android:layout_width="85dp"
+        android:layout_height="85dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="672dp"
+        android:background="@drawable/meditate_icon"
+        android:contentDescription="lol"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/title_peacefulPiano"
+        android:layout_width="85dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="4dp"
+        android:text="Peaceful Piano"
+        android:textAlignment="center"
+        android:textSize="12sp"
+        android:textStyle="italic"
+        app:layout_constraintStart_toStartOf="@+id/ic_peacefulPiano"
+        app:layout_constraintTop_toBottomOf="@+id/ic_peacefulPiano" />
+
     <TextView
         android:id="@+id/videoPlaylistTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="12dp"
         android:layout_marginBottom="8dp"
         android:text="Meditation Videos"
+        android:textColor="@color/playlist_name"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:textColor="@color/playlist_name"
         app:layout_constraintBottom_toTopOf="@+id/ic_mediVideo"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/title_mediVideo"
+        android:layout_width="85dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="4dp"
+        android:text="Professional Wild Child"
+        android:textAlignment="center"
+        android:textSize="12sp"
+        android:textStyle="italic"
+        app:layout_constraintStart_toStartOf="@+id/ic_mediVideo"
+        app:layout_constraintTop_toBottomOf="@+id/ic_mediVideo" />
+
+    <ImageView
+        android:id="@+id/searchIcon"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="2dp"
+        app:layout_constraintBottom_toBottomOf="@+id/search_bar"
+        app:layout_constraintStart_toStartOf="@+id/search_bar"
+        app:layout_constraintTop_toTopOf="@+id/search_bar"
+        app:srcCompat="@drawable/ic_search_glass" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
