--- a/app/src/main/res/layout/activity_playlist_inside.xml
+++ b/app/src/main/res/layout/activity_playlist_inside.xml
@@ -7,39 +7,41 @@
     tools:context=".PlaylistInside"
     android:id="@+id/relativelayout2">
 
+    <include layout="@layout/appbar"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="360dp">
+        android:layout_height="360dp"
+        android:layout_marginTop="?attr/actionBarSize">
 
         <TextView
             android:id="@+id/textView2"
-            android:layout_width="250dp"
+            android:layout_width="353dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="294dp"
-            android:text="Playlist Name"
-            android:textAlignment="center"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:singleLine="true"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="235dp"
             android:ellipsize="marquee"
-            android:marqueeRepeatLimit="marquee_forever"/>
+            android:fontFamily="sans-serif"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:singleLine="true"
+            android:text="Playlist Name"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
             android:id="@+id/playButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="28dp"
             android:layout_marginTop="292dp"
-            android:backgroundTint="@android:color/transparent"
+            android:background="@drawable/circle_button"
             android:contentDescription="Play"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@android:drawable/ic_media_play"
-            app:tint="#686262" />
+            app:tint="#ffffff" />
 
         <ImageButton
             android:id="@+id/pauseButton"
@@ -55,45 +57,35 @@
             app:srcCompat="@android:drawable/ic_media_pause"
             app:tint="#686262" />
 
-        <ImageButton
-            android:id="@+id/shuffleButton"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_marginTop="292dp"
-            android:layout_marginEnd="20dp"
-            android:backgroundTint="@android:color/transparent"
-            android:contentDescription="Shuffle"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_shuffle_lol" />
-
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="204dp"
-            android:layout_height="204dp"
-            android:layout_marginBottom="104dp"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
+            android:layout_marginTop="35dp"
             android:background="#AC0F0F"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_playlist" />
 
         <TextView
-            android:id="@+id/checkID"
+            android:id="@+id/playAll"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="56dp"
-            android:text="TextView"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="28dp"
+            android:text="Play All"
+            android:textColor="#7792b2"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@+id/playButton"
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview2"
         android:layout_width="match_parent"
-        android:layout_height="480dp"
-        android:layout_marginTop="360dp"
-        android:layout_marginBottom="50dp" />
+        android:layout_height="395dp"
+        android:layout_marginTop="425dp" />
 </RelativeLayout>
