--- a/app/src/main/res/layout/song_list.xml
+++ b/app/src/main/res/layout/song_list.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<!--<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--    xmlns:tools="http://schemas.android.com/tools"-->
 
-    android:id="@+id/card_view"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:backgroundTint="@android:color/transparent">
+<!--    android:id="@+id/card_view"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    android:backgroundTint="@android:color/transparent">-->
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
@@ -22,7 +26,7 @@
             android:id="@+id/song_name"
             android:layout_width="251dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="28dp"
+            android:layout_marginStart="48dp"
             android:layout_marginTop="8dp"
             android:text="Song Name"
             android:textSize="25sp"
@@ -34,7 +38,7 @@
             android:id="@+id/artist_name"
             android:layout_width="252dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="28dp"
+            android:layout_marginStart="48dp"
             android:layout_marginBottom="4dp"
             android:text="Artist Name"
             android:textColor="#777272"
@@ -42,47 +46,59 @@
             android:textStyle="italic"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/song_name" />
+            app:layout_constraintTop_toBottomOf="@+id/song_name"
+            app:layout_constraintVertical_bias="0.0" />
 
         <ImageButton
             android:id="@+id/likeOffButton"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
-            android:layout_marginStart="11dp"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="8dp"
             android:contentDescription="Like off"
             app:backgroundTint="@android:color/transparent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/song_name"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.545"
+            app:layout_constraintVertical_bias="0.555"
             app:srcCompat="@drawable/ic_like_off" />
 
-        <ImageButton
-            android:id="@+id/likeOnButton"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
-            android:layout_marginStart="120dp"
-            android:contentDescription="Like off"
-            android:visibility="gone"
-            app:backgroundTint="@android:color/transparent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/song_name"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_like_on" />
+<!--        <ImageButton-->
+<!--            android:id="@+id/likeOnButton"-->
+<!--            android:layout_width="55dp"-->
+<!--            android:layout_height="55dp"-->
+<!--            android:layout_marginStart="120dp"-->
+<!--            android:contentDescription="Like off"-->
+<!--            android:visibility="gone"-->
+<!--            app:backgroundTint="@android:color/transparent"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintStart_toEndOf="@+id/song_name"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            app:srcCompat="@drawable/ic_like_on" />-->
 
         <ImageButton
             android:id="@+id/adpButton"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
-            android:layout_marginStart="4dp"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:contentDescription="Add to playlist"
-            android:src="@drawable/ic_add"
+            android:src="@drawable/ic_add_song"
             app:backgroundTint="@android:color/transparent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/likeOffButton"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.545" />
+            app:layout_constraintVertical_bias="0.555" />
+
+        <TextView
+            android:id="@+id/songPosition"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:text="##"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.512" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.cardview.widget.CardView>
+<!--</androidx.cardview.widget.CardView>-->
