Cleaned up bugs

--- a/app/src/main/res/layout/activity_counsellor_landing_page.xml
+++ b/app/src/main/res/layout/activity_counsellor_landing_page.xml
@@ -78,9 +78,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:text="TextView"
             android:layout_marginLeft="20dp"
-            android:layout_toRightOf="@id/counsellorModuleImage"/>
+            android:layout_toRightOf="@id/counsellorModuleImage"
+            android:text="Chats" />
 
     </RelativeLayout>
 
