--- a/app/src/main/res/layout/activity_confessions_page.xml
+++ b/app/src/main/res/layout/activity_confessions_page.xml
@@ -66,11 +66,12 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/confessionsPostRecView"
-        android:layout_height="wrap_content"
         android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_margin="10dp"
         android:layout_marginTop="2dp"
         android:padding="10dp"
-        android:layout_margin="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
