--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -8,8 +8,8 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/commentUserImage"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -18,7 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:background="@color/lightGrey"
+        android:background="@drawable/text_input"
         android:padding="10dp"
         app:layout_constraintStart_toEndOf="@+id/commentUserImage"
         app:layout_constraintTop_toTopOf="parent">
@@ -33,7 +33,6 @@
             android:id="@+id/commentTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
             android:textSize="12sp"
             android:layout_below="@id/commentUserName"
             android:layout_marginTop="5dp"
