--- a/app/src/main/res/layout/post_item.xml
+++ b/app/src/main/res/layout/post_item.xml
@@ -5,10 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="20dp"
-    android:background="@color/blue">
-
-
-
+    android:layout_marginVertical="10dp"
+    android:backgroundTint="@color/blue"
+    android:background="@drawable/text_input">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/postUserImage"
@@ -85,7 +84,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@null"
-                android:hint="Anything to post?"
+                android:hint="Comment"
                 android:textSize="15sp" />
 
             <ImageView
